--- a/pages/devresources/developper-resources.css
+++ b/pages/devresources/developper-resources.css
@@ -26,56 +26,147 @@ h2 {
     font-size: 1.25rem;
   }
 
-/* HEADER */
-a {
-    text-decoration: none;
-}
 
-li {
+/* header */
+
+.menu-desktop {
+    display: none;
+  }
+  
+  .header {
+    background-color: rgb(0, 0, 0);
+    box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
+    /* position: fixed; */
+    width: 100%;
+    z-index: 3;
+    left: 0;
+   }
+  
+  .header ul {
+    margin: 0;
+    padding: 0;
     list-style: none;
-}
+    overflow: hidden;
+  }
 
-.navbar {
-    padding: 20px;
-    background-color:#161516;
-    color: whitesmoke;
-}
-
-.nav-links a {
-    color: whitesmoke;
-}
-
-.menu {
-    display: flex;
-    gap: 1em;
-    font-size: 18px;
-}
-
-.menu li:hover {
-    background-color: rgb(221, 64, 64);
-    border-radius: 5px;
-    transition: 0.3s ease;
-}
-
-.menu li {
-    padding: 5px 14px;
-}
-
-input[type=checkbox]{
-    display: none;
-}
-
-.hamburger {
-    display: none;
-    font-size: 24px;
+  .header ul li {
+      color: var(--primaryColor);
+  }
+  
+  .header li a {
+    display: block;
+    padding: 20px 20px;
+    text-decoration: none;
+  }
+  
+  /**** à ajouter *****/
+  .header li a:visited {
+    color: var(--primary-color);
+  }
+  
+  .header ul{
+    border-bottom: .01rem solid var(--secondary-color);
+  }
+  
+  .header .logo {
+    display: block;
+    float: left;
+    font-size: 2em;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    text-decoration: none;
+  }
+  
+  /* menu */
+  
+  .header .menu {
+    clear: both;
+    max-height: 0;
+    transition: max-height .2s ease-out;
+  }
+  
+  /* menu icon */
+  
+  .header .menu-icon {
+    cursor: pointer;
+    display: flex; /**** à changer *****/
+    justify-content: flex-end; /**** à changer *****/
+    padding: 28px 20px;
+    position: relative;
     user-select: none;
-}
-/* END HEADER*/
+  }
+  
+  .header .menu-icon .navicon {
+    background: whitesmoke;
+    display: block;
+    height: 2px;
+    position: relative;
+    transition: background .2s ease-out;
+    width: 18px;
+  }
+  
+  .header .menu-icon .navicon:before,
+  .header .menu-icon .navicon:after {
+    background: whitesmoke;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+  }
+  
+  .header .menu-icon .navicon:before {
+    top: 5px;
+  }
+  
+  .header .menu-icon .navicon:after {
+    top: -5px;
+  }
+  
+  /* menu btn */
+  
+  .header .menu-btn {
+    display: none;
+  }
+  
+  .header .menu-btn:checked ~ .menu {
+    max-height: 240px;
+  }
+  
+  .header .menu-btn:checked ~ .menu-icon .navicon {
+    background: transparent;
+  }
+  
+  .header .menu-btn:checked ~ .menu-icon .navicon:before {
+    transform: rotate(-45deg);
+  }
+  
+  .header .menu-btn:checked ~ .menu-icon .navicon:after {
+    transform: rotate(45deg);
+  }
+  
+  .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+  .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+    top: 0;
+  }
+  
+  /* end of nav mobile */
+
 
 body {
     max-height: 100vh;
+    width: 100%;
     background-color: #000;
 }
+
+/* main {
+    /*margin-top: 410px;*/
+/*
+.beginner {
+    /*margin-top: 40px;
+    margin-top: 4%;
+}*/ 
 
 .beginnersBlog {
     display: flex;
@@ -101,19 +192,18 @@ body {
     clip-path: polygon(0 0,5% 100%,95% 100%,100% 0);
     padding-bottom: 0.625rem;
     margin-bottom: 6rem;
-
 }
 
 .devresource1-1 {
     border-radius:  12px 0px 0px 0px;
 }
+.devresource1-2 {
+    border-radius:  0px 12px 0px 0px;
+}
+
 
 .devresource1-1 h1 {
     margin: 6%;
-}
-
-.devresource1-2 {
-    border-radius:  0px 12px 0px 0px;
 }
 
 .devresource1-2 p {
@@ -389,6 +479,7 @@ body {
 /* footer mobile */
 
 footer {
+    margin-top: 2rem;
     bottom: 0;
     display: flex;
     flex-direction: column;
@@ -452,6 +543,42 @@ footer {
 
 
 @media screen and (min-width:391px) and (max-width:800px) { 
+
+    /* nav bar  */
+
+    .menu {
+        display: flex;
+    }
+
+    .header li a {
+        padding: 20px 30px;
+    }
+
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .header .menu {
+        clear: none;
+        float: right;
+        max-height: none;
+        border-bottom: none;
+        margin-right: 8rem;
+    }
+    .header .menu-icon {
+        display: none;
+    }
+
+    .header img {
+        width: 200px;
+        margin-left: 8rem;
+    }
+
+    /* end nav bar */
+
+
     .beginnersBlog div {
         height: 17.5rem;
     }
@@ -520,6 +647,42 @@ footer {
 }    
 
 @media screen and (min-width:801px) { 
+
+    /* nav bar  */
+
+    .menu {
+        display: flex;
+    }
+
+    .header li a {
+        padding: 20px 30px;
+    }
+
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .header .menu {
+        clear: none;
+        float: right;
+        max-height: none;
+        border-bottom: none;
+        margin-right: 8rem;
+    }
+    .header .menu-icon {
+        display: none;
+    }
+
+    .header img {
+        width: 200px;
+        margin-left: 8rem;
+    }
+
+    /* end nav bar */
+    
+
     .beginnersBlog div {
         height: 12.5rem;
     }
