--- a/pages/devresources/developper-resources.css
+++ b/pages/devresources/developper-resources.css
@@ -8,7 +8,7 @@
 }
 
 :root {
-    --primaryColor: rgb(247, 108, 108); /*(couleur wild code school) */
+    --primary-color: rgb(247, 108, 108); /*(couleur wild code school) */
     --secondaryColor: whitesmoke;   
     --navFootColor: rgb(255, 117, 74);
     --fontH1:font-weight: 800;
@@ -41,7 +41,7 @@ h2 {
     z-index: 3;
     left: 0;
    }
-  
+
   .header ul {
     margin: 0;
     padding: 0;
@@ -49,8 +49,8 @@ h2 {
     overflow: hidden;
   }
 
-  .header ul li {
-      color: var(--primaryColor);
+  .header li a {
+      color: var(--primary-color);
   }
   
   .header li a {
