fixed image size

--- a/pages/landing-page/style.css
+++ b/pages/landing-page/style.css
@@ -301,9 +301,9 @@ width: 40px;
     padding: 30px 30px;
   }
 
-  img {
-    width: 200px;
-  }
+.header img {
+  width: 200px;
+}
 
  main {
       display: flex;
